Precompile assets in CI test env
Failure to do so results in

Webpacker::Manifest::MissingEntryError

with
Webpacker can't find application in <path>. Possible causes:
1. You want to set webpacker.yml value of compile to true for your
   environment unless you are using the `webpack -w` or the
   webpack-dev-server.
2. webpack has not yet re-run to reflect updates.
3. You have misconfigured Webpacker's config/webpacker.yml file.
4. Your webpack configuration is not creating a manifest.
Your manifest contains:
{
}

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,5 +31,8 @@ jobs:
           command: bundle -v
       - ruby/load-cache
       - ruby/install-deps
+      - run:
+          name: Build assets
+          command: bundle exec rails assets:precompile
       - ruby/save-cache
       - ruby/run-tests
