--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@rails/webpacker": "4.2.2",
     "foundation-sites": "6.6.1",
     "jquery": "^3.4.1",
-    "turbolinks": "^5.2.0"
+    "promise-polyfill": "^8.1.3",
+    "turbolinks": "^5.2.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
