Add Forsa::DroppedCart to lib
Will sweep through older dropped carts and subscribe them to lists.
Still needs error handling. Still needs a link sent from the email.

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 MAILCHIMP_API_KEY=08f259f43cdff3559cfd3137a5353e7f-us5
 MAILCHIMP_LIST_ID=ddfc221de6
+MAILCHIMP_DROPPED_CART_LIST_ID=fake_dropped_cart_list_id
 RUBYOPT=-W:no-deprecated
